chore: rework approach

--- a/acronyms.sty
+++ b/acronyms.sty
@@ -120,5 +120,5 @@
 \newcommand{\io}[0]{input/output\xspace}
 \newcommand\iopairs[0]{\io pairs\xspace}
 \newcommand{\replicationPackage}[0]{replication package~\cite{schwab2025DanielDangoReplicationPackageAutomatedPromptEngineeringforTraceabilityLinkRecovery}\xspace}
-
+\newcommand{\zeroshot}[0]{zero-shot}
 \newcommand{\omitt}[0]{[...]}
