--- a/sections/appendix.tex
+++ b/sections/appendix.tex
@@ -65,6 +65,12 @@
     \\
     \input{prompts/zadenoori_optimization_modified}
 \end{prompt}
+
+\begin{prompt}{\ToT prompt by \citewithauthor{hulbert2023UsingTreeofThought}}{tot-1}
+    \label{prompt:tot}
+    \\
+    \input{prompts/original-tree-of-thought}
+\end{prompt}
 %% ---------------------
 %% | / Example content |
 %% ---------------------
