chore: apply advisor feedback on abstract and conclusion

--- a/acronyms.sty
+++ b/acronyms.sty
@@ -38,7 +38,7 @@
 \DeclareAcronym{APE}{short=APE, long=automatic prompt engineering}
 \DeclareAcronym{LLM}{short=LLM, long=large language model}
 \DeclareAcronym{TLR}{short=TLR, long = traceability link recovery}
-\DeclareAcronym{TL}{short=TL, long = traceability link}
+\DeclareAcronym{TL}{short=TL, long = trace link}
 \DeclareAcronym{ProTeGi}{short=ProTeGi, long = Prompt Optimization with Textual Gradients, cite=pryzant2023AutomaticPrompt}
 \DeclareAcronym{IR}{short=IR, long = information retrieval}
 \DeclareAcronym{KISS}{short=KISS, long = keep it short and simple}
