chore: improve approach

--- a/acronyms.sty
+++ b/acronyms.sty
@@ -66,6 +66,7 @@
 \newcommand{\CoT}[0]{\ac{CoT}\xspace}
 \newcommand{\APO}[0]{\ac{APO}\xspace}
 \newcommand{\APE}[0]{\ac{APE}\xspace}
+\newcommand{\APECapitalized}[0]{Automatic Prompt Engineering\xspace}
 \newcommand{\LLM}[0]{\ac{LLM}\xspace}
 \newcommand{\LLMs}[0]{\acp{LLM}\xspace}
 \newcommand{\TLR}[0]{\ac{TLR}\xspace}
