--- a/sections/approach.tex
+++ b/sections/approach.tex
@@ -10,16 +10,12 @@ Next, naive iterative prompt optimization approaches with and without feedback a
 They provide basic functionality upon which the more sophisticated \ProTeGi algorithm in \autoref{approach:sec:gradient_descent} is based.
 
 
-\section{Simple Tree-of-Thought Classifier}
+\section{Tree-of-Thought Prompting}
 \label{sec:Approach:tot}
-\Todo{Is the section name correct?}
 
 \Ac{ToT} is a prompting technique exploring more different branches of thoughts than typical \CoT prompts.
 \Todo{What are thoughts? Can this be introduced in Foundations maybe?}
 This can be achieved by chaining multiple requests to a \LLM~\cite{long2023LargeLanguage}.
-The prompts by \citewithauthor{hulbert2023UsingTreeofThought} aim to simplify \ToT prompting into a singular request.
-They provide three different prompts to achieve this.
-The full best performing \autoref{prompt:tot} can be found in the appendix.
 
 \begin{figure}
     \centering
@@ -35,15 +31,14 @@ The full best performing \autoref{prompt:tot} can be found in the appendix.
 \end{figure}
 
 In \autoref{fig:ToT_visualization} we can see the three different prompting techniques highlighted in green.
-Among them are aside from the \ToT prompt also a zero-shot and \CoT prompt, to visualize the differences.
+Among them are aside from the \ToT prompt also a \zeroshot and \CoT prompt, to visualize the differences.
 The input data, highlighted in yellow, is queried with one of the prompting techniques to the \LLM.
 In our case this can be a pair of requirements, for which the output should state whether a \TL exists between them.
 Examining the three different prompting techniques, we note a varying amount of thoughts before the output is reached.
 Thoughts are represented by white and orange rounded boxes, with orange ones being discarded during the thought process.
 As for the zero-shot prompt the \LLM reaches their conclusion without a thought process.
 The \CoT style prompt results in a linear thought path.
-Thus, if any thought deviates, the \LLM might be led to a false conclusion.
-\Todo{Source? I made it up, is not a valid source...}
+Thus, if any thought deviates, the \LLM might be led to a false conclusion~\cite{wang2023SelfConsistencyImproves}.
 Prompting with \ToT addresses this, as we can see multiple thoughts explorer per level independently.
 This concrete number is chosen just for illustrative purposes.
 If and only if the \LLM identifies them as wrong, they will be discarded.
@@ -58,6 +53,9 @@ The output is then reached as a consensus of these multiple paths.
     \omitt
 \end{prompt}
 
+The prompts by \citewithauthor{hulbert2023UsingTreeofThought} aim to simplify \ToT prompting into a singular request.
+They provide three different prompts to achieve this.
+The complete best performing \ToT \autoref{prompt:tot} for \TLR in the \LiSSAf can be found in the appendix.
 As illustrated in \autoref{fig:ToT_visualization}, many branches are explored concurrently instead of following a single strain of thoughts like \CoT prompting.
 We can see this instruction in \autoref{prompt:tot}.
 The \LLM is instructed to act as multiple experts to initiate multiple thought processes concurrently.
@@ -74,35 +72,37 @@ Foremost, to get confident and set up with the general project structure and ben
 This is a prerequisite for my future work in the \LiSSA framework.
 Second, this broadens the baseline to compare later results and possible improvements against.
 
-\section{\APE in the \LiSSAF}
+\section{\APECapitalized in LiSSA}
 \label{sec:Approach:ape_in_lissa}
 
 \begin{figure}
     \centering
     \includesvg[width=\textwidth]{graphics/LiSSA_pipeline_with_optimization.svg}
     \caption{Overview of the proposed prompt optimization approach for \TLR tasks in the \LiSSAf. Modified from \citewithauthor{fuchss2025LiSSAGeneric}}
+    \label{fig:prompt_optimization_pipeline}
     The new prompt optimization component is highlighted in light blue.
     Highlighted in yellow are the actual artifacts.
     Highlighted in purple are steps prompting \LLMs for processing.
     White nodes represent processing inside the framework.
-    \label{fig:prompt_optimization_pipeline}
 \end{figure}
 
 To add \APE capabilities to the \LiSSAF, a new pipeline step is introduced.
 \autoref{fig:prompt_optimization_pipeline} provides an overview of the proposed approach.
 The new optimization step, highlighted in light blue, is an iterative pipeline step to alter the classification prompt.
-It will be placed after the initial preprocessing of the input data.
-The \promptoptimizer component will use the preprocessed data to optimize a given prompt.
-The optimized prompt can then be used in the regular \LLM-based prompting step to classify \TLs.
+It is placed after the initial preprocessing of the input data.
+The \promptoptimizer component uses the preprocessed data to optimize a given prompt.
+The optimized prompt is then used in the regular \LLM-based prompting step to classify \TLs.
 
-The different prompt optimization algorithms to be used will be introduced in the following subsections.
+The different prompt optimization algorithms to be used are be introduced in the following subsections.
 First a naive iterative approach is presented in \autoref{approach:sec:naive_iterative}.
 This implementation is the basis for the more sophisticated \ProTeGi algorithm in \autoref{approach:sec:gradient_descent}.
 
-\subsection{Naive Iterative \APE}
+\subsection{Naive Iterative \APECapitalized}
 \label{approach:sec:naive_iterative}
 To add \APE capabilities to the \LiSSAF, a naive iterative optimizer is added.
 As in \autoref{sec:Approach:tot} the existing classifiers of the \LiSSAF can be used to evaluate the \TLR performance of the optimized prompts.
+
+\Todo{Übergang, WTF ist der Absatz mit der Gleichung eigentlich?}
 
 \begin{equation}
     \label{eq:naive_opti}
@@ -113,7 +113,7 @@ As in \autoref{sec:Approach:tot} the existing classifiers of the \LiSSAF can be 
 More formally as written in \autoref{eq:naive_opti}, a function $f$ will be required to quantify the result, also referred to as performance.
 The current prompt $p$ iteration, called to a \LLM $llm$ using a set of training data $X$, returns this result.
 The metrics provided by an \LiSSA evaluation run: precision, recall and \fone, can be used as this performance function.
-The function $f$ will need to have the same range for any set of training data to ensure the threshold value $t$ will always be viable.
+The function $f$ needs to have the same range for any set of training data to ensure the threshold value $t$ will always be viable.
 
 \begin{prompt}{Simple Optimization Prompt}{initial_optimization}
     \label{prompt:optimization_prompt_simple}
@@ -123,23 +123,29 @@ The function $f$ will need to have the same range for any set of training data t
 
 To improve \TLR performance, \autoref{prompt:optimization_prompt_simple} is used as the optimization prompt.
 As visualized in \autoref{fig:iterative_core_loop} the expected outputs for training data may also be used to improve the prompt.
-The most naive approach is to simply ask the \LLM to improve the prompt without providing further direction or information about why the prompt did not meet the requirements.
-The hopefully improved prompt will be taken into the next iteration.
-The act of evaluation and improving will be repeated until a threshold value is passed, meaning the prompt is considered good enough.
-To limit resource usage, a hard limit will also be included to put an upper bound on the optimization attempts.
+The most naive approach is to simply ask the \LLM to improve the prompt without providing further direction or information.
+Context about why the prompt did not meet the requirements, also refered to as feedback, is not yet provided with \autoref{prompt:optimization_prompt_simplempt}.
+The optimized prompt is taken into the next iteration.
+The loop of evaluating and optimizing is repeated, until a threshold value is passed, meaning the prompt is considered good enough.
+To limit resource usage, a hard limit is also included to put an upper bound on the number optimization attempts.
 
-This naive \promptoptimizer implementation can be used for more sophisticated prompt optimization algorithms.
+\Todo{include Feedback Optimizer}
+
+This naive \promptoptimizer implementation is used as a basis for more sophisticated prompt optimization algorithms.
 Furthermore, we are able to compare whether optimization results differ between naive and sophisticated approaches.
 
-\subsection{\APE with \ProTeGi}
+\subsection{\APECapitalized with \ProTeGi}
 \label{approach:sec:gradient_descent}
-The iterative optimization implementation created for \autoref{approach:sec:naive_iterative} is used as a foundation for the implementation.
+The naive iterative optimization implementation created for \autoref{approach:sec:naive_iterative} is used as a foundation for the implementation.
 The core concepts of the \ProTeGi optimization algorithm remain the same.
 Details of the \ProTeGi algorithm are introduced in \autoref{sec:gradient_descent}.
 
 \citewithauthor{pryzant2023AutomaticPrompt} have provided their Python source code in a publicly accessible repository\footnote{https://github.com/microsoft/LMOps/tree/main/prompt\_optimization} under the MIT license.
 The project code for their algorithm, is the basis for the adaption to the \LiSSA Java framework.
 The primary idea of this thesis is to explore \APE.
-The naive approach of \autoref{approach:sec:naive_iterative} may yield good results already.
-Feeding more information and processing logic into the optimization system is expected to present better results.
-Especially suitable results may be reached faster by doing more processing on the local machine instead of expensive \API calls to the \LLM.
+As such different prompt optimization algorithms are implemented and evaluated.
+Feeding more information and processing logic into the optimization system is expected to present better results than the naive approach.
+Especially, suitable results may be reached faster and or cheaper by more processing on the local machine instead of expensive \API calls to the \LLM.
+
+\Todo{Bissel kurz noch die subsection?}
+\Todo{Ctrl+F nach ".\cite" (Quelle muss vor den Punkt)}
