--- a/thesis.bib
+++ b/thesis.bib
@@ -737,9 +737,15 @@
   keywords = {Computer Science - Computation and Language,Computer Science - Information Retrieval}
 }
 
-@article{weiChainofThoughtPrompting,
+@article{wei2022ChainofThoughtPrompting,
   title = {Chain-of-{{Thought Prompting Elicits Reasoning}} in {{Large Language Models}}},
-  author = {Wei, Jason and Wang, Xuezhi and Schuurmans, Dale and Bosma, Maarten and Ichter, Brian and Xia, Fei and Chi, Ed H and Le, Quoc V and Zhou, Denny},
+  author = {Wei, Jason and Wang, Xuezhi and Schuurmans, Dale and Bosma, Maarten and Ichter, Brian and Xia, Fei and Chi, Ed and Le, Quoc V. and Zhou, Denny},
+  date = {2022-12-06},
+  journaltitle = {Advances in Neural Information Processing Systems},
+  volume = {35},
+  pages = {24824--24837},
+  url = {https://proceedings.neurips.cc/paper/2022/hash/9d5609613524ecf4f15af0f7b31abca4-Abstract-Conference.html},
+  urldate = {2025-10-16},
   langid = {english}
 }
 
@@ -862,18 +868,17 @@
   keywords = {Computer Science - Software Engineering}
 }
 
-@online{zhao2025SurveyLarge,
+@online{zhao2023SurveyLarge,
   title = {A {{Survey}} of {{Large Language Models}}},
   author = {Zhao, Wayne Xin and Zhou, Kun and Li, Junyi and Tang, Tianyi and Wang, Xiaolei and Hou, Yupeng and Min, Yingqian and Zhang, Beichen and Zhang, Junjie and Dong, Zican and Du, Yifan and Yang, Chen and Chen, Yushuo and Chen, Zhipeng and Jiang, Jinhao and Ren, Ruiyang and Li, Yifan and Tang, Xinyu and Liu, Zikang and Liu, Peiyu and Nie, Jian-Yun and Wen, Ji-Rong},
-  date = {2025-03-11},
-  eprint = {2303.18223},
-  eprinttype = {arXiv},
-  eprintclass = {cs},
-  doi = {10.48550/arXiv.2303.18223},
-  url = {http://arxiv.org/abs/2303.18223},
+  date = {2023},
+  doi = {10.48550/ARXIV.2303.18223},
+  url = {https://arxiv.org/abs/2303.18223},
   urldate = {2025-10-15},
+  langid = {english},
   pubstate = {prepublished},
-  keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language}
+  version = {16},
+  keywords = {Artificial Intelligence (cs.AI),Computation and Language (cs.CL),Computer Science - Artificial Intelligence,Computer Science - Computation and Language,FOS: Computer and information sciences}
 }
 
 @online{zhou2023LargeLanguage,
